# seqanalysis_py

./: .gitignore  Lena_EmmyGrand.py  MaxNonBranchingPoints.py  README.md  chunkextraktion_chi2.py  compare_matrixes.py  correlation_of_two_syl.py  distribution_repeats.py  do_transition_matrix.py  example_yaml.yaml  experimente.py  first_class.py  get_sequence_changes.py  helper_functions.py  matrix_bu01ye01.py  playback_distribution_matrix.py  plot_functions.py  pyproject.toml  transition_prob_to_syl.py  vak_mk_predict_toml.py  y01pu08.yaml
code/: distribution_repeats.py  do_transition_matrix.py
code/jacquiutil/: plot_functions.py
jacquiutil/: helper_functions.py
seqanalysis/: Lena_EmmyGrand.py  correlation_of_two_syl.py  distribution_repeats_multiple_syl.py  distributions_withplayback.py  do_transition_matrix.py  example_yaml.yaml  example_yaml_y03pu10.yaml  transition_prob_to_syl.py  vak_mk_predict_toml.py
seqanalysis/distributions/: compare_matrixes.py  distribution_repeats.py  distribution_repeats_multiple_syl.py  distributions_withplayback.py  how_good_was_targeting.py  learning_plot.py  onsetsoffsets.py  playback_distribution_matrix.py
seqanalysis/jacquiutil/: helper_functions.py
seqanalysis/onset_detection/: audio_trace_onsets_offsets.py  audio_trace_per_syl.py
seqanalysis/training/: plot_sensitivity.py
seqanalysis/transition_diagram/: chunkextraktion_chi2.py  compare_matrixes.py  do_transition_matrix.py  gr88gr06.yaml  template.yaml  y00pu07.yaml
seqanalysis/util/: calc_matrix_transition_diagram.py  filter_functions.py  helper_functions.py  (+4 more)
