[tool.poetry]
name = "seqanalysis-py"
version = "0.1.0"
description = "Scripts for analysing not.mat data to get transiongraphs and the matrix"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.4"
scipy = "^1.13.0"
ipython = "^8.23.0"
pyyaml = "^6.0.1"
networkx = "^3.3"
pandas = "^2.2.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
